@@ -1,3 +1,12 @@
+2011-08-27  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Don't expose implementation detail for opaque DIRENT structures.
+
+	* include/dirent.h (DIR, _WDIR): Declare as opaque data types.
+	(__dirstream_t, __wdirstream_t): Add these tags for their underlying
+	structures, respectively; move their detailed declarations to...
+	* mingwex/dirent.c: ...here.
+
 2011-08-23 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>
 
 	* include/_mingw.h: Increment version to 3.20.
